# bitpacking

./: .gitignore  Makefile  README.md  compressed_overflow.json  compressed_overflow_demo.json  compressed_spec_example.json  input.json  input_overflow.json  input_overflow_demo.json  input_spec_example.json  pyproject.toml  ruff.toml  test_compressed.json  test_cross_output.json  test_large.json  test_large_cross.json  test_large_noncross.json
src/bitpacking/: __init__.py  __main__.py  base.py  bench.py  cli.py  cross.py  factory.py  noncross.py  overflow.py  transmission.py
test_files/: .gitkeep
tests/: test_cross.py  test_factory.py  test_noncross.py  test_overflow.py  test_transmission.py
